# HDK_DOP_samples

./: .gitignore  FindHoudini.cmake  README.md
01-ExternalForce/: CMakeLists.txt  GravityForce.hipnc
01-ExternalForce/hdk/: Entrance.cpp  GAS_Gravity_Force.cpp  GAS_Gravity_Force.h
02-Emitter/: CMakeLists.txt  VolumeEmitter.hipnc
02-Emitter/hdk/: Entrance.cpp  GAS_Volume_Emitter.cpp  GAS_Volume_Emitter.h
10-DFSPH/: CMakeLists.txt  DFSPH.hipnc  DFSPH_CUDA.hipnc  DFSPH_SIMD.hipnc  DFSPH_TBB.hipnc
10-DFSPH/hdk/: Entrance.cpp  GAS_DFSPH_Solver.cpp  GAS_DFSPH_Solver.h  SIM_DFSPH_Particles.cpp  SIM_DFSPH_Particles.h  utils.h
10-DFSPH/scene/: scene1.hipnc  scene2.hipnc
10-DFSPH/src_gpu/: CMakeLists.txt  DFSPH.cu  DFSPH.cuh
10-DFSPH/src_gpu/common/: CudaAllocator.h
10-DFSPH/src_gpu/neighbor/include/: PointSet.h  cuNSearch_export.h
10-DFSPH/src_gpu/neighbor/src/: cuNSearchDeviceData.cu  cuNSearchDeviceData.h
10-DFSPH/src_simd/: CMakeLists.txt  DFSPH.cpp  DFSPH.h
10-DFSPH/src_simd/vectorclass/addon/containers/: general_containers.h  matrixv.h  vector_containers.h
10-DFSPH/src_simd/vectorclass/addon/quaternion/: test_quaternion.lst
10-DFSPH/src_tbb/: CMakeLists.txt  DFSPH.cpp  DFSPH.h
11-PBF/: CMakeLists.txt
11-PBF/hdk/: Entrance.cpp  GAS_PBF_Solver.cpp  GAS_PBF_Solver.h
11-PBF/src_tbb/: CMakeLists.txt  PBF.cpp  PBF.h
20-Smoke/: CMakeLists.txt  Smoke.hipnc
20-Smoke/hdk/: Entrance.cpp  GAS_Smoke_Solver.cpp  GAS_Smoke_Solver.h
20-Smoke/src/: CMakeLists.txt  advect.cpp  advect.h  diffuse.cpp  diffuse.h  pressure.cpp  pressure.h  source.cpp  source.h  stable_fluids.cpp  stable_fluids.h
21-StableFluids/: CMakeLists.txt  Smoke.hipnc  StableFluids.hipnc
21-StableFluids/hdk/: Entrance.cpp  GAS_StableFluids.cpp  GAS_StableFluids.h  diffusion.cpp  diffusion.h  poisson.cpp  poisson.h
21-StableFluids2D/: CMakeLists.txt  Smoke2D.hipnc
21-StableFluids2D/hdk/: Entrance.cpp  GAS_StableFluids2D.cpp  GAS_StableFluids2D.h
21-VolumeRenderer/: CMakeLists.txt  VolumeRenderer.hipnc
21-VolumeRenderer/hdk/: Entrance.cpp  GAS_Volume_Renderer.cpp  GAS_Volume_Renderer.h
22-LevelSet/: CMakeLists.txt
22-LevelSet/hdk/: Entrance.cpp  GAS_LevelSet_Solver.cpp  GAS_LevelSet_Solver.h
22-PIC/: CMakeLists.txt
22-PIC/hdk/: Entrance.cpp  GAS_PIC_Solver.cpp  GAS_PIC_Solver.h
23-PIC/: PIC.hipnc
23-PIC/hdk/: GAS_PIC_Solver.cpp  GAS_PIC_Solver.h
30-FLIP/: CMakeLists.txt  FLIP.hipnc
30-FLIP/hdk/: Entrance.cpp  GAS_FLIP_Solver.cpp  GAS_FLIP_Solver.h
40-Rigid/: CMakeLists.txt  Rigid.hdk.hipnc
40-Rigid/hdk/: Entrance.cpp  GAS_Rigid_Apply_Impulse.cpp  GAS_Rigid_Apply_Impulse.h
50-FastMassSpring/: CMakeLists.txt  FastMassSpring.hipnc
50-FastMassSpring/hdk/: Entrance.cpp  GAS_FMS_Solver.cpp  GAS_FMS_Solver.h
50-FastMassSpring/src/: CMakeLists.txt  FastMassSpring.cpp  FastMassSpring.h
54-IPC/: CMakeLists.txt
54-IPC/hdk/: Entrance.cpp  GAS_IPC_Solver.cpp  GAS_IPC_Solver.h
60-CHOP/: CMakeLists.txt
60-CHOP/hdk/: COP2_Stochastic_Tomography.cpp  Entrance.cpp
60-COP/: CMakeLists.txt  StochasticTomography.hipnc
60-COP/hdk/: COP2_FullImageFilter.C  COP2_FullImageFilter.h  COP2_Stochastic_Tomography.h  Entrance.cpp
61-Python/: DFSPH.py  taichi01.py
70-KeyFrameSmoke/: CMakeLists.txt  KeyFrameSmoke.hipnc
70-KeyFrameSmoke/hdk/: Entrance.cpp  GAS_KeyFrameSmoke_Solver.cpp  GAS_KeyFrameSmoke_Solver.h
70-Python/: DFSPH.py  Python.hipnc  phiflow01.py  procedure.md  warp01.py
test/: CMakeLists.txt  main.cpp
